{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 192,
  "lineage": "df8e19a4-f64f-202f-de57-ff29084f0d6b",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "lb_demo_sc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/loadBalancers/LB-demo-sc/frontendIPConfigurations/PublicFrontEnd",
                "load_balancer_rules": [
                  "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/loadBalancers/LB-demo-sc/loadBalancingRules/https-rule"
                ],
                "name": "PublicFrontEnd",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/publicIPAddresses/pip-LB-demo-sc"
              }
            ],
            "id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/loadBalancers/LB-demo-sc",
            "location": "swedencentral",
            "name": "LB-demo-sc",
            "resource_group_name": "rg-abarzi-sch",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "owner": "amir"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.lb_pip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "lb_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/networkInterfaces/nic-vm-web2-demo/ipConfigurations/ipconfig-vm-web2-demo",
              "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/networkInterfaces/nic-vm-web1-demo/ipConfigurations/ipconfig-vm-web1-demo"
            ],
            "id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/loadBalancers/LB-demo-sc/backendAddressPools/BackendPool",
            "load_balancing_rules": [
              "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/loadBalancers/LB-demo-sc/loadBalancingRules/https-rule"
            ],
            "loadbalancer_id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/loadBalancers/LB-demo-sc",
            "name": "BackendPool"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.lb_demo_sc",
            "azurerm_public_ip.lb_pip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "http_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/loadBalancers/LB-demo-sc/probes/http-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/loadBalancers/LB-demo-sc",
            "name": "http-probe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.lb_demo_sc",
            "azurerm_public_ip.lb_pip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "https_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/loadBalancers/LB-demo-sc/probes/https-probe",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/loadBalancers/LB-demo-sc/loadBalancingRules/https-rule"
            ],
            "loadbalancer_id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/loadBalancers/LB-demo-sc",
            "name": "https-probe",
            "number_of_probes": 2,
            "port": 443,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.lb_demo_sc",
            "azurerm_public_ip.lb_pip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "https_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/loadBalancers/LB-demo-sc/backendAddressPools/BackendPool"
            ],
            "backend_port": 443,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "floating_ip_enabled": false,
            "frontend_ip_configuration_id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/loadBalancers/LB-demo-sc/frontendIPConfigurations/PublicFrontEnd",
            "frontend_ip_configuration_name": "PublicFrontEnd",
            "frontend_port": 443,
            "id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/loadBalancers/LB-demo-sc/loadBalancingRules/https-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/loadBalancers/LB-demo-sc",
            "name": "https-rule",
            "probe_id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/loadBalancers/LB-demo-sc/probes/https-probe",
            "protocol": "Tcp",
            "tcp_reset_enabled": false
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.lb_demo_sc",
            "azurerm_lb_backend_address_pool.lb_backend",
            "azurerm_lb_probe.https_probe",
            "azurerm_public_ip.lb_pip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm_nics",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vm-mgmt-swc",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/networkInterfaces/nic-vm-mgmt-swc",
            "internal_domain_name_suffix": "iypay3m0pyfengznh0lbhkqccg.gvxx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig-vm-mgmt-swc",
                "primary": true,
                "private_ip_address": "10.50.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/publicIPAddresses/pip-vm-mgmt-swc",
                "subnet_id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/virtualNetworks/vnet-shared-swc/subnets/sub-mgmt"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "swedencentral",
            "mac_address": "7C-1E-52-33-62-F9",
            "name": "nic-vm-mgmt-swc",
            "private_ip_address": "10.50.0.4",
            "private_ip_addresses": [
              "10.50.0.4"
            ],
            "resource_group_name": "rg-abarzi-sch",
            "tags": {
              "owner": "amir"
            },
            "virtual_machine_id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Compute/virtualMachines/vm-mgmt-swc"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "nic-vm-mgmt-swc",
            "resource_group_name": "rg-abarzi-sch",
            "subscription_id": "18a54fef-d36d-4d1c-b7b4-c468a773149b"
          },
          "dependencies": [
            "azurerm_public_ip.vm_pip_mgmt",
            "azurerm_subnet.subnets",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "vm-web1-demo",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/networkInterfaces/nic-vm-web1-demo",
            "internal_domain_name_suffix": "iypay3m0pyfengznh0lbhkqccg.gvxx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig-vm-web1-demo",
                "primary": true,
                "private_ip_address": "10.50.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/virtualNetworks/vnet-shared-swc/subnets/sub-apps"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "swedencentral",
            "mac_address": "7C-1E-52-33-65-DA",
            "name": "nic-vm-web1-demo",
            "private_ip_address": "10.50.1.5",
            "private_ip_addresses": [
              "10.50.1.5"
            ],
            "resource_group_name": "rg-abarzi-sch",
            "tags": {
              "owner": "amir"
            },
            "virtual_machine_id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Compute/virtualMachines/vm-web1-demo"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "nic-vm-web1-demo",
            "resource_group_name": "rg-abarzi-sch",
            "subscription_id": "18a54fef-d36d-4d1c-b7b4-c468a773149b"
          },
          "dependencies": [
            "azurerm_public_ip.vm_pip_mgmt",
            "azurerm_subnet.subnets",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "vm-web2-demo",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/networkInterfaces/nic-vm-web2-demo",
            "internal_domain_name_suffix": "iypay3m0pyfengznh0lbhkqccg.gvxx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig-vm-web2-demo",
                "primary": true,
                "private_ip_address": "10.50.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/virtualNetworks/vnet-shared-swc/subnets/sub-apps"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "swedencentral",
            "mac_address": "7C-ED-8D-9E-6A-BB",
            "name": "nic-vm-web2-demo",
            "private_ip_address": "10.50.1.4",
            "private_ip_addresses": [
              "10.50.1.4"
            ],
            "resource_group_name": "rg-abarzi-sch",
            "tags": {
              "owner": "amir"
            },
            "virtual_machine_id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Compute/virtualMachines/vm-web2-demo"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "nic-vm-web2-demo",
            "resource_group_name": "rg-abarzi-sch",
            "subscription_id": "18a54fef-d36d-4d1c-b7b4-c468a773149b"
          },
          "dependencies": [
            "azurerm_public_ip.vm_pip_mgmt",
            "azurerm_subnet.subnets",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "nic_lb_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vm-web1-demo",
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/loadBalancers/LB-demo-sc/backendAddressPools/BackendPool",
            "id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/networkInterfaces/nic-vm-web1-demo/ipConfigurations/ipconfig-vm-web1-demo|/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/loadBalancers/LB-demo-sc/backendAddressPools/BackendPool",
            "ip_configuration_name": "ipconfig-vm-web1-demo",
            "network_interface_id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/networkInterfaces/nic-vm-web1-demo"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.lb_demo_sc",
            "azurerm_lb_backend_address_pool.lb_backend",
            "azurerm_network_interface.vm_nics",
            "azurerm_public_ip.lb_pip",
            "azurerm_public_ip.vm_pip_mgmt",
            "azurerm_subnet.subnets",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "vm-web2-demo",
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/loadBalancers/LB-demo-sc/backendAddressPools/BackendPool",
            "id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/networkInterfaces/nic-vm-web2-demo/ipConfigurations/ipconfig-vm-web2-demo|/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/loadBalancers/LB-demo-sc/backendAddressPools/BackendPool",
            "ip_configuration_name": "ipconfig-vm-web2-demo",
            "network_interface_id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/networkInterfaces/nic-vm-web2-demo"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.lb_demo_sc",
            "azurerm_lb_backend_address_pool.lb_backend",
            "azurerm_network_interface.vm_nics",
            "azurerm_public_ip.lb_pip",
            "azurerm_public_ip.vm_pip_mgmt",
            "azurerm_subnet.subnets",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsgs",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "sub-apps",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/networkSecurityGroups/nsg-sub-apps",
            "location": "swedencentral",
            "name": "nsg-sub-apps",
            "resource_group_name": "rg-abarzi-sch",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-RDP-From-sub-mgmt",
                "priority": 310,
                "protocol": "Tcp",
                "source_address_prefix": "10.50.0.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTPS",
                "priority": 330,
                "protocol": "Tcp",
                "source_address_prefix": "10.50.0.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTP",
                "priority": 320,
                "protocol": "Tcp",
                "source_address_prefix": "10.50.0.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "owner": "amir"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-sub-apps",
            "resource_group_name": "rg-abarzi-sch",
            "subscription_id": "18a54fef-d36d-4d1c-b7b4-c468a773149b"
          }
        },
        {
          "index_key": "sub-mgmt",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/networkSecurityGroups/nsg-sub-mgmt",
            "location": "swedencentral",
            "name": "nsg-sub-mgmt",
            "resource_group_name": "rg-abarzi-sch",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "RDP",
                "priority": 300,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "owner": "amir"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "nsg-sub-mgmt",
            "resource_group_name": "rg-abarzi-sch",
            "subscription_id": "18a54fef-d36d-4d1c-b7b4-c468a773149b"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "http_subapps",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/networkSecurityGroups/nsg-sub-apps/securityRules/Allow-HTTP",
            "name": "Allow-HTTP",
            "network_security_group_name": "nsg-sub-apps",
            "priority": 320,
            "protocol": "Tcp",
            "resource_group_name": "rg-abarzi-sch",
            "source_address_prefix": "10.50.0.0/24",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Allow-HTTP",
            "network_security_group_name": "nsg-sub-apps",
            "resource_group_name": "rg-abarzi-sch",
            "subscription_id": "18a54fef-d36d-4d1c-b7b4-c468a773149b"
          },
          "dependencies": [
            "azurerm_network_security_group.nsgs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "https_subapps",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/networkSecurityGroups/nsg-sub-apps/securityRules/Allow-HTTPS",
            "name": "Allow-HTTPS",
            "network_security_group_name": "nsg-sub-apps",
            "priority": 330,
            "protocol": "Tcp",
            "resource_group_name": "rg-abarzi-sch",
            "source_address_prefix": "10.50.0.0/24",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Allow-HTTPS",
            "network_security_group_name": "nsg-sub-apps",
            "resource_group_name": "rg-abarzi-sch",
            "subscription_id": "18a54fef-d36d-4d1c-b7b4-c468a773149b"
          },
          "dependencies": [
            "azurerm_network_security_group.nsgs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rdp_from_my_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/networkSecurityGroups/nsg-sub-mgmt/securityRules/Allow-RDP-From-My-IP",
            "name": "Allow-RDP-From-My-IP",
            "network_security_group_name": "nsg-sub-mgmt",
            "priority": 310,
            "protocol": "Tcp",
            "resource_group_name": "rg-abarzi-sch",
            "source_address_prefix": "91.25.202.146/32",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Allow-RDP-From-My-IP",
            "network_security_group_name": "nsg-sub-mgmt",
            "resource_group_name": "rg-abarzi-sch",
            "subscription_id": "18a54fef-d36d-4d1c-b7b4-c468a773149b"
          },
          "dependencies": [
            "azurerm_network_security_group.nsgs",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rdp_internal_subapps",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/networkSecurityGroups/nsg-sub-apps/securityRules/Allow-RDP-From-sub-mgmt",
            "name": "Allow-RDP-From-sub-mgmt",
            "network_security_group_name": "nsg-sub-apps",
            "priority": 310,
            "protocol": "Tcp",
            "resource_group_name": "rg-abarzi-sch",
            "source_address_prefix": "10.50.0.0/24",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Allow-RDP-From-sub-mgmt",
            "network_security_group_name": "nsg-sub-apps",
            "resource_group_name": "rg-abarzi-sch",
            "subscription_id": "18a54fef-d36d-4d1c-b7b4-c468a773149b"
          },
          "dependencies": [
            "azurerm_network_security_group.nsgs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "lb_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/publicIPAddresses/pip-LB-demo-sc",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.91.217.241",
            "ip_version": "IPv4",
            "location": "swedencentral",
            "name": "pip-LB-demo-sc",
            "resource_group_name": "rg-abarzi-sch",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "owner": "amir"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vm_pip_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/publicIPAddresses/pip-vm-mgmt-swc",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.223.225.76",
            "ip_version": "IPv4",
            "location": "swedencentral",
            "name": "pip-vm-mgmt-swc",
            "resource_group_name": "rg-abarzi-sch",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "owner": "amir"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "sub-apps",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.50.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/virtualNetworks/vnet-shared-swc/subnets/sub-apps",
            "name": "sub-apps",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-abarzi-sch",
            "virtual_network_name": "vnet-shared-swc"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "sub-apps",
            "resource_group_name": "rg-abarzi-sch",
            "subscription_id": "18a54fef-d36d-4d1c-b7b4-c468a773149b",
            "virtual_network_name": "vnet-shared-swc"
          },
          "dependencies": [
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "sub-mgmt",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.50.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/virtualNetworks/vnet-shared-swc/subnets/sub-mgmt",
            "name": "sub-mgmt",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-abarzi-sch",
            "virtual_network_name": "vnet-shared-swc"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "sub-mgmt",
            "resource_group_name": "rg-abarzi-sch",
            "subscription_id": "18a54fef-d36d-4d1c-b7b4-c468a773149b",
            "virtual_network_name": "vnet-shared-swc"
          },
          "dependencies": [
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "sub-apps",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/virtualNetworks/vnet-shared-swc/subnets/sub-apps",
            "network_security_group_id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/networkSecurityGroups/nsg-sub-apps",
            "subnet_id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/virtualNetworks/vnet-shared-swc/subnets/sub-apps"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsgs",
            "azurerm_subnet.subnets",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "sub-mgmt",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/virtualNetworks/vnet-shared-swc/subnets/sub-mgmt",
            "network_security_group_id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/networkSecurityGroups/nsg-sub-mgmt",
            "subnet_id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/virtualNetworks/vnet-shared-swc/subnets/sub-mgmt"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsgs",
            "azurerm_subnet.subnets",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.50.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "750c1e46-7e9a-460a-9b2d-3e9613aa0216",
            "id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/virtualNetworks/vnet-shared-swc",
            "location": "swedencentral",
            "name": "vnet-shared-swc",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "rg-abarzi-sch",
            "subnet": [
              {
                "address_prefixes": [
                  "10.50.0.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/virtualNetworks/vnet-shared-swc/subnets/sub-mgmt",
                "name": "sub-mgmt",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/networkSecurityGroups/nsg-sub-mgmt"
              },
              {
                "address_prefixes": [
                  "10.50.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/virtualNetworks/vnet-shared-swc/subnets/sub-apps",
                "name": "sub-apps",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/18a54fef-d36d-4d1c-b7b4-c468a773149b/resourceGroups/rg-abarzi-sch/providers/Microsoft.Network/networkSecurityGroups/nsg-sub-apps"
              }
            ],
            "tags": {
              "owner": "amir"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "vnet-shared-swc",
            "resource_group_name": "rg-abarzi-sch",
            "subscription_id": "18a54fef-d36d-4d1c-b7b4-c468a773149b"
          }
        }
      ]
    }
  ]
}